Переход на assertj.